Add WebSocket Test Tool to portfolio

--- a/index.html
+++ b/index.html
@@ -431,6 +431,25 @@
                 <a href="https://lance70176.github.io/cors-test-tool/" class="tool-link" target="_blank">立即使用 →</a>
             </div>
             
+            <!-- WebSocket 連線測試工具 -->
+            <div class="tool-card">
+                <div class="tool-icon" style="background: linear-gradient(135deg, #11998e 0%, #38ef7d 100%);">🔌</div>
+                <div class="tool-content">
+                    <h2>WebSocket 連線測試工具</h2>
+                    <p class="description">
+                        WebSocket Test Tool - 快速測試 WS/WSS 連線，支援即時連線狀態顯示。
+                    </p>
+                    <ul class="features">
+                        <li>支援 WS (未加密) / WSS (加密)</li>
+                        <li>即時連線時間與狀態</li>
+                        <li>自動發送 ping 測試</li>
+                        <li>詳細連線日誌</li>
+                        <li>自動關閉連線</li>
+                    </ul>
+                </div>
+                <a href="https://lance70176.github.io/websocket-test-tool/" class="tool-link" target="_blank">立即使用 →</a>
+            </div>
+            
             <!-- 預留位置給未來工具 -->
             <div class="tool-card" style="opacity: 0.6;">
                 <div class="tool-icon" style="background: #ccc;">🚧</div>
