Add IP Checker to portfolio

--- a/index.html
+++ b/index.html
@@ -456,6 +456,25 @@
                 <a href="https://lance70176.github.io/websocket-test-tool/" class="tool-link" target="_blank">立即使用 →</a>
             </div>
             
+            <!-- IP 位址檢測工具 -->
+            <div class="tool-card">
+                <div class="tool-icon" style="background: linear-gradient(135deg, #1e3c72 0%, #2a5298 100%);">🌐</div>
+                <div class="tool-content">
+                    <h2>IP 位址檢測工具</h2>
+                    <p class="description">
+                        IP Address Checker - 檢測您的 IPv4/IPv6 位址與地理位置資訊，在地圖上顯示位置。
+                    </p>
+                    <ul class="features">
+                        <li>檢測 IPv4/IPv6 位址</li>
+                        <li>顯示 ISP、城市、國家</li>
+                        <li>OpenStreetMap 地圖定位</li>
+                        <li>毛玻璃視覺效果</li>
+                        <li>隱私安全提醒</li>
+                    </ul>
+                </div>
+                <a href="https://lance70176.github.io/ip-checker/" class="tool-link" target="_blank">立即使用 →</a>
+            </div>
+            
             <!-- 預留位置給未來工具 -->
             <div class="tool-card" style="opacity: 0.6;">
                 <div class="tool-icon" style="background: #ccc;">🚧</div>
