Update Google Auth link to Vercel

--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
                         <li>純前端實現，資料不離開瀏覽器</li>
                     </ul>
                 </div>
-                <a href="https://lance70176.github.io/gen_google_secret_key/" class="tool-link" target="_blank">立即使用 →</a>
+                <a href="https://rex-google-auth.vercel.app" class="tool-link" target="_blank">立即使用 →</a>
             </div>
             
             <!-- JSON 格式化工具 -->
